Setting up refresh token implementation
