# backend/src/harmony/app/schemas/auth.py
@@ -1,5 +1,6 @@
 from pydantic import BaseModel
 
 class Token(BaseModel):
-    access_token: str
-    token_type: str = "bearer"
+    token: str
+    token_type: str # one of "access_token" or "refresh_token" depending on context
+    expiration: int # in seconds until token expires
